--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="wrong_number">Wrong number?</string>
     <string name="invalidPhone">Invalid phone number</string>
     <string name="alerts">Alerts</string>
+    <string name="chkkdd">Checked by Police</string>
 </resources>
