--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,17 @@
     <string name="thisCse">This case has not been seen by the police!</string>
     <string name="flUp">FOLLOW UP</string>
     <string name="caseSeen">Case has been seen by the Police</string>
-    <string name="snBy">\"Seen by police \"</string>
+    <string name="snBy">Seen by police </string>
+    <string name="launch_activity">Launch activity</string>
+    <string name="location_unknown">Location unknown</string>
+    <string name="location_updates_label">Location Updates</string>
+
+    <string name="permission_denied_explanation">Permission was denied, but is needed for core
+        functionality.</string>
+    <string name="settings">Settings</string>
+    <string name="request_location_updates">Request location updates</string>
+    <string name="remove_location_updates">Remove location updates</string>
+
+    <string name="location_updated">Location Updated: %1$s</string>
 
 </resources>
