removed play back on uploading

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,5 +87,9 @@
     <string name="remove_location_updates">Remove location updates</string>
 
     <string name="location_updated">Location Updated: %1$s</string>
+    <string name="mkRpt">Make a report</string>
+    <string name="sure">Are you sure you want to make a report?</string>
+    <string name="no">No</string>
+    <string name="yes">yes</string>
 
 </resources>
